--- a/index.html
+++ b/index.html
@@ -558,11 +558,13 @@
           <p class="function-desc">판매 시작/중지만 빠르게 변경합니다. (가격 및 종료 ID는 변경되지 않음)</p>
 
           <div class="checkbox-container">
+            <input type="checkbox" id="quickWhitelistStart">
             <label for="quickWhitelistStart">화이트리스트 판매 정지/시작</label>
             <button class="btn-secondary" onclick="toggleWhitelistSale()" style="margin-left:10px;">적용</button>
           </div>
 
           <div class="checkbox-container">
+            <input type="checkbox" id="quickPublicStart">
             <label for="quickPublicStart">퍼블릭 판매 정지/시작</label>
             <button class="btn-secondary" onclick="togglePublicSale()" style="margin-left:10px;">적용</button>
           </div>
