--- a/index.html
+++ b/index.html
@@ -568,8 +568,9 @@
             <label for="quickPublicStart">퍼블릭 판매 정지/시작</label>
             <button class="btn-secondary" onclick="togglePublicSale()" style="margin-left:10px;">적용</button>
           </div>
-
-          <small class="note">💡 정지된 상태면 시작이 되고, 시작인 상태면 정지가 됩니다. 현재 상태를 파악 후 적용 버튼을 누르세요.</small>
+          
+          <small class="note">💡 체크박스를 체크하고 적용을 누르면 시작, 풀고 적용을 누르면 정지 입니다. 참고하세요.</small>
+          <small class="note">💡 체크박스 유무에 따라 현재 상태를 변화시킵니다. LIVE 상태에서 체크를 하고 적용누르면 변화가 없습니다.</small>
         </div>
       </div>
     </section>
